src/objects/Account_Segmentation__c.object
<CustomObject>
    <fields>
        <fullName>Account_Segment_Name__c</fullName>
        <label>Account Segment Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>ARMY</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>CC</fullName>
                </value>
                <value>
                    <fullName>Class II</fullName>
                </value>
                <value>
                    <fullName>Class II Member</fullName>
                </value>
                <value>
                    <fullName>Club Rewards Enrolled</fullName>
                </value>
                <value>
                    <fullName>CORE</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>DDS w/ Lab</fullName>
                </value>
                <value>
                    <fullName>DDS w/out Lab</fullName>
                </value>
                <value>
                    <fullName>Denturist</fullName>
                </value>
                <value>
                    <fullName>DEPOT</fullName>
                </value>
                <value>
                    <fullName>Digital</fullName>
                </value>
                <value>
                    <fullName>DSO w/ Lab</fullName>
                </value>
                <value>
                    <fullName>DSO w/out Lab</fullName>
                </value>
                <value>
                    <fullName>Elite</fullName>
                </value>
                <value>
                    <fullName>F_Classics</fullName>
                </value>
                <value>
                    <fullName>F_Loyalty</fullName>
                </value>
                <value>
                    <fullName>F_Strategic</fullName>
                </value>
                <value>
                    <fullName>Focus350</fullName>
                </value>
                <value>
                    <fullName>Foundation</fullName>
                </value>
                <value>
                    <fullName>Gov</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Government - Local</fullName>
                </value>
                <value>
                    <fullName>HART Member</fullName>
                </value>
                <value>
                    <fullName>Hosp</fullName>
                </value>
                <value>
                    <fullName>Hospital</fullName>
                </value>
                <value>
                    <fullName>House</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Segments</relationshipLabel>
        <relationshipName>Account_Segments</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Integration_ID__c</fullName>
        <externalId>true</externalId>
        <label>Integration ID</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Segment_Division__c</fullName>
        <label>Segment Division</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Alliance</fullName>
                </value>
                <value>
                    <fullName>Canada CHR</fullName>
                </value>
                <value>
                    <fullName>Canada CHR 2013</fullName>
                </value>
                <value>
                    <fullName>Canada CHR Ranking</fullName>
                </value>
                <value>
                    <fullName>Canada LS</fullName>
                </value>
                <value>
                    <fullName>Canada LS 2013</fullName>
                </value>
                <value>
                    <fullName>Canada RMV</fullName>
                </value>
                <value>
                    <fullName>Canada RMV 2013</fullName>
                </value>
                <value>
                    <fullName>Canada RMV Ranking</fullName>
                </value>
                <value>
                    <fullName>CAN CHR Ranking</fullName>
                </value>
                <value>
                    <fullName>CAN CHR Ranking 2016</fullName>
                </value>
                <value>
                    <fullName>CAN CHR Ranking 2017</fullName>
                </value>
                <value>
                    <fullName>CAN RMV Ranking 2016</fullName>
                </value>
                <value>
                    <fullName>CAN RMV Ranking 2017</fullName>
                </value>
                <value>
                    <fullName>Caulk</fullName>
                </value>
                <value>
                    <fullName>CCS</fullName>
                </value>
                <value>
                    <fullName>Class II</fullName>
                </value>
                <value>
                    <fullName>Class II Member</fullName>
                </value>
                <value>
                    <fullName>Club Rewards</fullName>
                </value>
                <value>
                    <fullName>DNA</fullName>
                </value>
                <value>
                    <fullName>Emerging Markets</fullName>
                </value>
                <value>
                    <fullName>Gov</fullName>
                </value>
                <value>
                    <fullName>Gov Branches</fullName>
                </value>
                <value>
                    <fullName>HART</fullName>
                </value>
                <value>
                    <fullName>Hosp</fullName>
                </value>
                <value>
                    <fullName>Hyg</fullName>
                </value>
                <value>
                    <fullName>Hygiene</fullName>
                </value>
                <value>
                    <fullName>Lab</fullName>
                </value>
                <value>
                    <fullName>LGP CONTRACT</fullName>
                </value>
                <value>
                    <fullName>Med</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Account Segmentation</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>US_Consumable_Account_Setments</fullName>
        <columns>Segment_Division__c</columns>
        <columns>Account_Segment_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>US Consumable Account Segments</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>SEG-{000000}</displayFormat>
        <label>Account Segment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Segments</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>